--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
-name = "color-gen"
-version = "0.1.0"
+name = "cargo-color"
+version = "0.0.1"
 edition = "2024"
+description = "A tool for generating color schemes"
+license = "MIT or Apache-2.0"
+authors = ["Daniel Gallups <dsgallups@protonmail.com>"]
+keywords = ["cli", "cargo-subcommand"]
+readme = "README.md"
 
 [dependencies]
 anyhow = "1.0.97"
