rename to cargo-color-gen before publish

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cargo-color"
+name = "cargo-color-gen"
 version = "0.0.1"
 edition = "2024"
 description = "A tool for generating color schemes"
