fix license field

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "cargo-color-gen"
 version = "0.0.1"
 edition = "2024"
 description = "A tool for generating color schemes"
-license = "MIT or Apache-2.0"
+license = "MIT OR Apache-2.0"
 authors = ["Daniel Gallups <dsgallups@protonmail.com>"]
 keywords = ["cli", "cargo-subcommand"]
 readme = "README.md"
