--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,5 @@ regex = "1.11.1"
 
 [dev-dependencies]
 bevy = { version = "0.15", default-features = false, features = ["bevy_color"] }
+
+[package.metadata.binstall]
