--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-color-gen"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2024"
 description = "A tool for generating color schemes"
 license = "MIT OR Apache-2.0"
@@ -23,3 +23,7 @@ regex = "1.11.1"
 
 [dev-dependencies]
 bevy = { version = "0.15", default-features = false, features = ["bevy_color"] }
+
+[package.metadata.binstall]
+pkg-url = "{ repo }/releases/download/v{ version }/{ name }_{ target }{ archive-suffix }"
+pkg-fmt = "bin"
