identify this project as unmaintained

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "cargo-color-gen"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2024"
-description = "A tool for generating color schemes"
+description = "NOT MAINTAINED: A tool for generating color schemes"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/dsgallups/color-gen"
 authors = ["Daniel Gallups <dsgallups@protonmail.com>"]
